--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,4 +7,10 @@ edition = "2021"
 
 [dependencies]
 chumsky = "0.8.0"
+
+[dev-dependencies]
+manifest-dir-macros = "0.1.16"
 pretty_assertions = "1.2.1"
+
+[features]
+override_test = []
