--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 ariadne = "0.1.5"
 chumsky = "0.8.0"
+strip-ansi-escapes = "0.1.1"
 
 [dev-dependencies]
 manifest-dir-macros = "0.1.16"
