--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,6 @@ edition = "2021"
 [dependencies]
 ariadne = "0.1.5"
 chumsky = "0.8.0"
-strip-ansi-escapes = "0.1.1"
 
 [dev-dependencies]
 manifest-dir-macros = "0.1.16"
@@ -16,3 +15,6 @@ pretty_assertions = "1.2.1"
 
 [features]
 override-test = []
+
+[workspace]
+members = [ "scheme-parser-bin" ]
