--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,7 @@ ariadne = "0.1.5"
 chumsky = "0.8.0"
 
 [dev-dependencies]
+backtrace = "0.3.66"
 manifest-dir-macros = "0.1.16"
 pretty_assertions = "1.2.1"
 
