--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 ariadne = "0.1.5"
 chumsky = "0.8.0"
+derive_more = "0.99.17"
+num = "0.4.0"
 
 [dev-dependencies]
 backtrace = "0.3.66"
