--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 ariadne = "0.1.5"
 chumsky = "0.8.0"
 derive_more = "0.99.17"
+frunk = "0.4.0"
 num = "0.4.0"
 
 [dev-dependencies]
