fix: regression test

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ num = "0.4.0"
 backtrace = "0.3.66"
 manifest-dir-macros = "0.1.16"
 pretty_assertions = "1.2.1"
+strip-ansi-escapes = "0.1.1"
 walkdir = "2.3.2"
 
 [features]
